fixed z-index of drop down menu

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -45,7 +45,7 @@ header {
     width: 100%;
     background-color: $secondaryColor;
     color: $fontColorLight;
-    z-index: 1;
+    z-index: 2;
     li {
         padding: .25rem;
         border-bottom: 1px solid $highlightColor;
